--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
-orbs:
-  python: circleci/python@2.0.3
 jobs:
-  build_and_test: # this can be any name you choose - tên jobs
-    executor: python/default
+  build:
+    docker:
+      - image: python:3.8
     steps:
       - checkout
-      - run: python --version
-workflows:
-  build_test_deploy: # this can be any name you choose tên workflows
-    jobs:
-      - build_and_test
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.txt
+      - run:
+          name: Run tests
+          command: python -m unittest discover
